refactor: move libpointmatcher build-system logic to norlab-build-system submodule [NMO-398]
- fix test
- improve flags customization for test

--- a/build_system_templates/docker-compose.dependencies.yaml
+++ b/build_system_templates/docker-compose.dependencies.yaml
@@ -7,7 +7,7 @@ services:
       target: dependencies
       context: ..
       # (Priority) ToDo: change path to dockerfile
-      dockerfile: ${NBS_SUPERPROJECT_BUILD_SYSTEM_DIR:?err}/nbs_container/project-dependencies/Dockerfile.dependencies.template
+      dockerfile: ${NBS_SUPERPROJECT_BUILD_SYSTEM_DIR:?err}/nbs_container/project-dependencies/Dockerfile.dependencies
       # platforms:
       #   - "linux/amd64"
       #   - "linux/arm64/v8"
