build: set dockerfile checkout branch to feature branch temporarely and add Jammy to docker dryrun and test build matrix
- temporary set Dockerfile.dependencies NBS checkout branch to `dev-NMO-398-move-libpointmatcher-build-system-logic-to-norlab-build-system-submodule`
- add ubuntu Jammy to build matrix testing

--- a/build_system_templates/nbs_container/project-dependencies/Dockerfile.dependencies
+++ b/build_system_templates/nbs_container/project-dependencies/Dockerfile.dependencies
@@ -60,9 +60,9 @@ RUN apt-get update && \
 WORKDIR "${NBS_LIB_INSTALL_PATH}"
 RUN git clone --recurse-submodules https://github.com/norlab-ulaval/norlab-build-system.git
 
-## (CRITICAL) ToDo: on dev task end >> mute next bloc ↓↓
-#WORKDIR "${NBS_PATH}"
-#RUN git checkout dev-NMO-398-move-libpointmatcher-build-system-logic-to-norlab-build-system-submodule
+# (CRITICAL) ToDo: on dev task end >> mute next bloc ↓↓
+WORKDIR "${NBS_PATH}"
+RUN git checkout dev-NMO-398-move-libpointmatcher-build-system-logic-to-norlab-build-system-submodule
 
 # ====Begin========================================================================================
 
