--- a/build_system_templates/.env.build_matrix.project.template
+++ b/build_system_templates/.env.build_matrix.project.template
@@ -22,6 +22,7 @@ NBS_MATRIX_REPOSITORY_VERSIONS=( 'latest' )
 # Note: 'None' for building dependencies images
 # Part of the build matrix used for PR
 NBS_MATRIX_CMAKE_BUILD_TYPE=( 'Release' 'RelWithDebInfo' 'MinSizeRel' )
+#NBS_MATRIX_CMAKE_BUILD_TYPE=( 'Release' 'MinSizeRel' )
 
 #
 # Superproject supported OS
@@ -36,6 +37,7 @@ NBS_MATRIX_SUPPORTED_OS=( 'ubuntu' )
 #   bionic=18.04 focal=20.04 jammy=22.04
 # Part of the build matrix used for PR
 NBS_MATRIX_UBUNTU_SUPPORTED_VERSIONS=( 'bionic' 'focal' 'jammy' )
+#NBS_MATRIX_UBUNTU_SUPPORTED_VERSIONS=( 'bionic' 'focal' )
 #
 # iceboxed: implement other OS support (ref task NMO-213 OsX arm64-Darwin and NMO-210 OsX x86 CD components)
 #NBS_MATRIX_OSX_SUPPORTED_VERSIONS=( 'monterey' 'ventura' )
