style: refactor env variable name to better reflect semantic and cleanup test

--- a/.env.nbs
+++ b/.env.nbs
@@ -11,7 +11,7 @@
 #
 # =================================================================================================
 
-PROJECT_PROMPT_NAME='NBS'
+PROJECT_PROMPT_NAME=NBS
 
 # ....Programaticaly fetch source code information.................................................
 PROJECT_GIT_REMOTE_URL="https://github.com/norlab-ulaval/norlab-build-system"
