refactor: improve sourcing logic and enhance script robustness
- Refactored environment variable setup and sourcing logic for better clarity and flexibility.
- Added support for `NBS_PATH` to handle custom paths and refined directory navigation logic.
- Enhanced test scripts with additional cases to validate sourcing behavior and ensure directory
  state restoration post-execution.
- Improved error handling, debug logging, and temporary directory management.
- Update N2ST to latest release

Issue N2ST-53

--- a/.env.nbs
+++ b/.env.nbs
@@ -15,8 +15,8 @@ PROJECT_PROMPT_NAME=NBS
 
 # ....Programaticaly fetch source code information.................................................
 PROJECT_GIT_REMOTE_URL="https://github.com/norlab-ulaval/norlab-build-system"
-PROJECT_GIT_NAME=$( basename "${PROJECT_GIT_REMOTE_URL}" .git )
-PROJECT_PATH=$( git rev-parse --show-toplevel )
+PROJECT_GIT_NAME="$( basename ${PROJECT_GIT_REMOTE_URL} .git )"
+PROJECT_PATH="$( git rev-parse --show-toplevel )"
 PROJECT_SRC_NAME="$( basename ${PROJECT_PATH} )"
 
 # ....Set NBS related environment variable with their own prefix...................................
